scripts/etc/jenkins/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: jenkins-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ${VAULT_PKI_SECRET_NAME}
    hosts:
    - ${VAULT_PKI_LEAF_HOST}
